Fixed imaged alignment

--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
 .image-text {
   text-align: right;
   width: 160px;
-  margin-left: 50px;
+
+  margin-right: 200px;
   text-align: initial;
+  float: right;
 }
 .header {
   font-size: 50px;
@@ -18,9 +20,8 @@
   display: inline-block;
 }
 .body-text {
-  margin-right: 150px;
-  margin-left: 20px;
-  width: 300px;
+margin-right: -150px;
+  width: 350px;
 text-align: initial;
 }
 .break-bar {
@@ -36,4 +37,7 @@ text-align: initial;
   background-color: blue;
   padding: 30px;
   color: white;
+}
+.designers {
+  margin-left: 200px;
 }
